# full-stack-similarity-search

./: README.md  app.py  cifar_app.py  cifar_faiss.py  pyproject.toml  use_faiss.py  yelp_app.py  yelp_faiss.py
autoencoder/: __init__.py  autoencoder.py  dataset.py  train.py
